Alteracao de nome do folder.